Fixed issue with state manager and added subfaces

--- a/assessment_3/displays/displays/index.html
+++ b/assessment_3/displays/displays/index.html
@@ -30,15 +30,15 @@
         <div class="AsciiDisplay_SmallFaceContainer">
           <div class="AsciiDisplay_SmallFace"></div>
           <div class="AsciiDisplay_SmallFace"></div>
-          <div class="AsciiDisplay_SmallFace"></div>
-          <div class="AsciiDisplay_SmallFace"></div>
+          <div class="AsciiDisplay_SmallFace AsciiDisplay_SmallFace__Bottom"></div>
+          <div class="AsciiDisplay_SmallFace AsciiDisplay_SmallFace__Bottom"></div>
         </div>
         <div class="AsciiDisplay_MainFace"></div>
         <div class="AsciiDisplay_SmallFaceContainer">
           <div class="AsciiDisplay_SmallFace"></div>
           <div class="AsciiDisplay_SmallFace"></div>
-          <div class="AsciiDisplay_SmallFace"></div>
-          <div class="AsciiDisplay_SmallFace"></div>
+          <div class="AsciiDisplay_SmallFace AsciiDisplay_SmallFace__Bottom"></div>
+          <div class="AsciiDisplay_SmallFace AsciiDisplay_SmallFace__Bottom"></div>
         </div>
       </div>
       <div class="AsciiDisplay_FinalText">
