Added Result and Return text

--- a/assessment_3/displays/displays/index.html
+++ b/assessment_3/displays/displays/index.html
@@ -41,9 +41,8 @@
           <div class="AsciiDisplay_SmallFace AsciiDisplay_SmallFace__Bottom"></div>
         </div>
       </div>
-      <div class="AsciiDisplay_FinalText">
-
-      </div>
+      <div class="AsciiDisplay_ResultText"></div>
+      <div class="AsciiDisplay_ReturnText"></div>
     </div>
     <script src="/bundle.js"></script>
   </body>
