WIP on setting up display

--- a/assessment_3/displays/displays/index.html
+++ b/assessment_3/displays/displays/index.html
@@ -19,9 +19,21 @@
 
     </div>
 
-    <div class="Display EmotionDisplay" id="emotion"></div>
+    <!-- 
+      EMOTION DISPLAY HTML
+    -->
+    <div class="Display EmotionDisplay" id="emotion">
+      <div class="EmotionDisplay_MainBlock">
+        <div class="EmotionDisplay_InitialText"></div>
+        <div class="EmotionDisplay_Canvas"></div>
+        <div class="EmotionDisplay_ResultText"></div>
+      </div>
+      <div class="EmotionDisplay_SegmentBlock"></div>
+    </div>
 
-    <!-- ASCII DISPLAY HTML -->
+    <!--
+      ASCII DISPLAY HTML
+    -->
     <div class="Display AsciiDisplay" id="ascii">
       <div class="AsciiDisplay_InitialText">
 
