Added ASCII segmented Faces

--- a/assessment_3/displays/displays/index.html
+++ b/assessment_3/displays/displays/index.html
@@ -8,6 +8,7 @@
       <a class="Menu_Option" href="/?face_points=active">facepoints</a>
       <a class="Menu_Option" href="/?sex=active">sex</a>
       <a class="Menu_Option" href="/?age=active">age</a>
+      <a class="Menu_Option" href="/?emotion=active">emotion</a>
       <a class="Menu_Option" href="/?ascii=active">ascii</a>
     </div>
 
