Changed user ID display

--- a/assessment_3/displays/displays/public/index.html
+++ b/assessment_3/displays/displays/public/index.html
@@ -28,6 +28,7 @@
         <div class="EmotionDisplay_InitialText"></div>
         <div class="EmotionDisplay_Canvas"></div>
         <div class="EmotionDisplay_ResultText"></div>
+        <div class="EmotionDisplay_IdText"></div>
       </div>
       <div class="EmotionDisplay_SegmentBlock"></div>
     </div>
