Completed frontend for emotion display

--- a/assessment_3/displays/displays/public/index.html
+++ b/assessment_3/displays/displays/public/index.html
@@ -12,8 +12,13 @@
       <a class="Menu_Option" href="/?ascii=active">ascii</a>
     </div>
 
-    <div class="Display" id="face-points">
-
+    <div class="Display FacePointsDisplay" id="face-points">
+      <div class="FacePointsDisplay_Wrapper">
+        <div class="FacePointsDisplay_InitialText"></div>
+        <div class="FacePointsDisplay_CanvasContainer"></div>
+        <div class="FacePointsDisplay_ResultText"></div>
+        <div class="FacePointsDisplay_Results"></div>
+      </div>
     </div>
     <div class="Display" id="sex"></div>
     <div class="Display" id="age">
