Added basic delauney tesselation

--- a/assessment_3/displays/displays/public/index.html
+++ b/assessment_3/displays/displays/public/index.html
@@ -7,7 +7,6 @@
       <h4>Select a display</h4>
       <a class="Menu_Option" href="/?face_points=active">facepoints</a>
       <a class="Menu_Option" href="/?sex=active">sex</a>
-      <a class="Menu_Option" href="/?age=active">age</a>
       <a class="Menu_Option" href="/?emotion=active">emotion</a>
       <a class="Menu_Option" href="/?ascii=active">ascii</a>
     </div>
@@ -20,9 +19,10 @@
         <div class="FacePointsDisplay_Results"></div>
       </div>
     </div>
-    <div class="Display" id="sex"></div>
-    <div class="Display" id="age">
-
+    <div class="Display SexDisplay" id="sex">
+      <div class="SexDisplay_InitialText"></div>
+      <div class="SexDisplay_CanvasContainer"></div>
+      <div class="SexDisplay_ResultText"></div>
     </div>
 
     <!-- 
