Adjusted sizes of all displays

--- a/assessment_3/displays/displays/public/index.html
+++ b/assessment_3/displays/displays/public/index.html
@@ -20,9 +20,12 @@
       </div>
     </div>
     <div class="Display SexDisplay" id="sex">
-      <div class="SexDisplay_InitialText"></div>
-      <div class="SexDisplay_CanvasContainer"></div>
+      <div class="SexDisplay_ImageWrapper">
+        <div class="SexDisplay_InitialText"></div>
+        <div class="SexDisplay_CanvasContainer"></div>
+      </div>
       <div class="SexDisplay_ResultText"></div>
+      
     </div>
 
     <!-- 
